# strike

./: .env.example  .gitignore  100_PERCENT_COMPLETION_REPORT.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETION_CERTIFICATE.md  CONFIRMACAO_FINAL.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_100_PERCENT_STATUS.md  FINAL_DELIVERY_SUMMARY.md  FINAL_REPORT.md  FINAL_SESSION_SUMMARY.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  LICENSE  PHASE2_FINAL_SUMMARY.md  PHASE2_PROGRESS.md  PROJECT_EXECUTION_MASTER_PLAN.md  PUBLICATION_SUMMARY.md  README.md  SESSION_3_FINAL_SUMMARY.md  SESSION_FINAL_SUMMARY.md  SPRINT1_COMPLETION_SUMMARY.md  SUCCESS_100_PERCENT.md  SUMMARY.md  VERIFICATION.md  docker-compose.yml
.github/workflows/: strike-security-scan.yml
.strike/: strike.db  strike.toml
examples/: basic_usage.rs
src/: lib.rs  main.rs
src/agents/: auth_agent.rs  evidence_agent.rs  hypothesis.rs  mod.rs  recon_agent.rs  remediation.rs  report_agent.rs  retest.rs  root_cause.rs  scope_agent.rs  validation_agent.rs
src/benchmark/: metrics.rs  mod.rs  suite.rs  targets.rs
src/ci/: annotations.rs  gate.rs  incremental.rs  mod.rs  policy.rs  sarif.rs
src/cli/: args.rs  commands.rs  completions.rs  mod.rs  validation.rs
src/config/: mod.rs  validation.rs
src/llm/: anthropic.rs  cache.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  (+5 more)
tests/: agents_evidence_test.rs  agents_hypothesis_test.rs  auth_agent_test.rs  cli_test.rs  executive_report_test.rs  github_action_test.rs  graphql_fuzzer_test.rs  http_client_pooling_test.rs  hypothesis_agent_test.rs  input_validation_security_test.rs  integration_test.rs  llm_cache_integration_test.rs  llm_retry_integration_test.rs  llm_streaming_test.rs  llm_test.rs  performance_benchmarks.rs  recon_agent_test.rs  retest_agent_test.rs  root_cause_test.rs  sandbox_test.rs  scan_incremental_test.rs  secret_scanner_test.rs  shell_completions_test.rs  traffic_replayer_test.rs  validation_agent_advanced_test.rs  validation_agent_complete_test.rs  vulnerability_detectors_test.rs  websocket_real_test.rs  websocket_testing.rs  workflow_recovery_test.rs  workflow_test.rs
workflows/: deep-scan.yaml  recon.yaml  web-scan.yaml
(+55 files in other folders)
